# dbt-datahub-governance

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  commands.md  pyproject.toml
.github/workflows/: ci.yml
examples/: governance.example.yml
src/: __init__.py
src/config/: __init__.py  loader.py
src/datahub/: __init__.py  client.py  urn_mapper.py
src/models/: dbt_models.py  governance.py
src/parsers/: manifest.py
src/reporters/: __init__.py  base.py  console.py  github.py  json_reporter.py  markdown.py
src/rules/: base.py  builtin.py  engine.py
tests/: conftest.py  test_config.py  test_datahub.py  test_parsers.py  test_reporters.py  test_rules.py
